# faceplatform

./: .devcontainer.json  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: deploy-devpod.yaml  deploy.yml  docker-image.yml  verify-docker.yml  vite-lint.yml
client/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.cjs  eslint.config.js  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  error-page.tsx  index.css  main.tsx
client/src/api/mutations/: useDeleteFaceImage.ts  useFaceDelete.ts  useRenameFace.ts
client/src/api/queries/: useGetEvents.ts  useGetFaces.ts  useGetFacesGallery.ts
client/src/common/: url.ts
client/src/events/: events.tsx
client/src/hooks/: useMutation.ts  useQuery.ts
client/src/routes/: App.css  App.tsx
client/src/tagFaces/: TagFaces.css  TagFaces.tsx  faceGallery.css  faceGallery.tsx
devpod/: Dockerfile
src/: captured_imaged.py  event.py  events_manager.py  face_recognition.py  face_recognition_process.py  go2rtc_server_manager.py  main.py  router.py  uvicorn.py
src/dal/: base.py  db.py  event.py
src/inputs/: input.py  input_manager.py  mqtt_input.py  unifi_input.py
src/routers/: events.py  faces.py
src/services/: event_service.py  face_service.py
src/utils/: logger.py  paths.py  singleton.py
