[tool.poetry]
name = "faceplatform"
version = "0.1.0"
description = ""
authors = ["niv gabay <nivg1992@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
deepface = "^0.0.93"
paho-mqtt = "^2.1.0"
requests = "^2.32.3"
tf-keras = "^2.18.0"
pyyaml = "^6.0.2"
matplotlib = "^3.9.3"
dlib = "^19.24.6"
fastapi = "^0.115.6"
peewee = "^3.17.8"
uvicorn = "^0.32.1"
websockets = "^14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

