[tool.poetry]
name = "faceplatform"
version = "0.1.0"
description = ""
authors = ["niv gabay <nivg1992@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
deepface = "^0.0.93"
paho-mqtt = "^2.1.0"
requests = "^2.32.3"
tf-keras = "^2.18.0"
pyyaml = "^6.0.2"
matplotlib = "^3.10.0"
dlib = "^19.24.6"
fastapi = "^0.115.8"
peewee = "^3.17.9"
uvicorn = "^0.34.0"
websockets = "^14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

