[tool.poetry]
name = "faceplatform"
version = "0.1.0"
description = ""
authors = ["niv gabay <nivg1992@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
deepface = "^0.0.95"
paho-mqtt = "^2.1.0"
requests = "^2.32.5"
tf-keras = "^2.20.1"
pyyaml = "^6.0.3"
matplotlib = "^3.10.7"
dlib = "^20.0.0"
fastapi = "^0.120.0"
peewee = "^3.18.2"
uvicorn = "^0.38.0"
websockets = "^15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

